syntax = "proto3";
option java_multiple_files = true;

package com.alibaba.arthas.channel.proto;

message SystemEnvResult {
    string type = 1;
    map<string, string> env = 2;
}

message VersionResult {
    string type = 1;
    string version = 2;
}